edits for issue #41 and shared scripts + bugs fixed
